Fix th width and alignment on small screen

--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,6 @@ tr {
 #specimens th {
   font-weight: 600;
   padding: 2rem 0.8rem;
-  width: calc(100% / 3);
   text-align: center;
 }
 
@@ -330,12 +329,12 @@ footer .repo a:hover {
     width: 100%;
     height: 8.5rem;
   }
+}
 
-  @media (max-width: 480px) {
-    .heading-details {
-      justify-content: space-around;
-      gap: 0;
-    }
+@media (max-width: 480px) {
+  .heading-details {
+    justify-content: space-around;
+    gap: 0;
   }
 
   .h1-heading {
@@ -344,8 +343,14 @@ footer .repo a:hover {
 
   #specimens th {
     font-size: 1.5rem;
-    line-height: 2.3rem;
+    line-height: 1.5;
     text-align: left;
+  }
+
+  #specimens th:nth-child(2) {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   #specimens td:first-of-type {
